[package]
name = "app"
version = "0.4.0"
description = "Rust image handler for Tauri app"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-rc.3", features = ["api-all"] }
base64 = "0.13"
image = "0.24"
rayon = "1.5"
zip = "0.5"
thiserror = "1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
lto = "thin"
